--- a/predict.yaml
+++ b/predict.yaml
@@ -1,12 +1,34 @@
-hourly_data_path: 'electricityConsumptionAndProductioction.csv'
-daily_data_path: 'weather_2011-2021_Romania.csv'
-forecasted_daily_data_path: 'weather_test_small.csv'
-hourly_date_col: 'timestamp'
-daily_date_col: 'timestamp'
-hourly_feature_cols: ['Consumption', 'Production', 'Wind']
-daily_feature_cols: ['Temperature', 'Relative Humidity', 'Wind Speed']
-seq_length_hourly: 24
-seq_length_daily: 7
-target_col: 'Consumption'
-epochs: 10
-batch_size: 32
+datasets:
+  electricity_file: "electricityConsumptionAndProductioction.csv"  # Replace with your actual electricity data filename
+  weather_file: "weather_2011-2021_Romania.csv"          # Replace with your actual weather data filename
+
+training:
+  date_column:
+    electricity: "timestamp"                # Replace with the actual datetime column name in electricity data
+    weather: "timestamp"                   # Replace with the actual datetime column name in weather data
+  columns:
+    electricityConsumptionAndProductioction.csv:                  # Replace with your actual electricity file name
+      - "Consumption"                      # Replace with the required columns for the electricity dataset
+      - "Nuclear"
+      - "Wind"
+      - "Hydroelectric"
+      - "Oil and Gas"
+      # - "Coal"
+      # - "Solar"
+      # - "Biomass"
+    weather_2011-2021_Romania.csv:                      # Replace with your actual weather file name
+      - "Temperature"                      # Replace with the required columns for the weather dataset
+      - "Dew Point"
+      - "Relative Humidity"
+      - "Wind Speed"
+      # - "Cloud Cover"
+      # - "Visibility"
+      # - "Sea Level Pressure"
+  target_column: "Consumption"             # Replace with the target column name in electricity data
+  sequence_length: 24                      # Sequence length for LSTM
+  batch_size: 32                           # Batch size for DataLoader
+  epochs: 10                               # Number of training epochs
+
+model:
+  lstm_units: 64                           # Number of LSTM units in the model
+  learning_rate: 0.001                     # Learning rate for the optimizer
